Fix: Update of Announcements for security config